--- a/.env.development
+++ b/.env.development
@@ -4,7 +4,8 @@ PORT=3000
 
 SERVER_URL=http://127.0.0.1:3000
 
-DATABASE_URL=mongodb://127.0.0.1:27017/webChat
+# DATABASE_URL=mongodb://127.0.0.1:27017/webChat
+MONGO_URI=mongodb://127.0.0.1:27017/webChat
 
 JWT_SECRET=hello_world
 
